Your commit message

--- a/.env.template
+++ b/.env.template
@@ -1,2 +1,2 @@
-OPENAI_API_KEY=""
-OPENAI_MODEL=""
+OPENAI_MODEL=gpt-4o-mini
+OPENAI_API_KEY=sk-None-hagED548ji7s9aezpN8wT3BlbkFJS7CKkECH4jhqB0w0Liay
