--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,8 @@
         "@mui/material": "^6.0.2",
         "axios": "^0.21.1",
         "react": "^18.3.1",
-        "react-dom": "^18.3.1"
+        "react-dom": "^18.3.1",
+        "react-lazy-load-image-component": "^1.6.2"
     },
     "devDependencies": {
         "@babel/plugin-proposal-optional-chaining": "^7.21.0",
