--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,4 +1,5 @@
-  steps:
-  # running docker-compose
-  - name: 'docker/compose:1.26.2'
-    args: ['up', '-d']
+steps:
+- name: 'docker/compose:1.26.2'
+  args: ['up', '-d']
+options:
+  logging: CLOUD_LOGGING_ONLY
