--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,3 +1,7 @@
+# Specify logging behavior
+options:
+  logging: CLOUD_LOGGING_ONLY
+
 steps:
 # Build and push frontend image
 - name: 'gcr.io/cloud-builders/docker'
