--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,5 +41,8 @@ steps:
   - 'managed'
   - '--allow-unauthenticated'
 
+substitutions:
+  _REGION: us-central1  # default region, can be overridden
+
 options:
   logging: CLOUD_LOGGING_ONLY
