--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,8 @@ steps:
   - '--platform'
   - 'managed'
   - '--allow-unauthenticated'
+  - '--set-env-vars'
+  - 'PORT=8080'
 
 substitutions:
   _REGION: us-central1  # default region, can be overridden
