--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -19,6 +19,7 @@ flask = "^3.0.3"
 opencv-python = "^4.10.0.84"
 numpy = "^2.1.1"
 python-dotenv = "^1.0.1"
+gunicorn = "^20.1.0"
 
 [build-system]
 requires = ["poetry-core"]
