--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -29,6 +29,8 @@ steps:
   - '--platform'
   - 'managed'
   - '--allow-unauthenticated'
+  - '--set-env-vars'
+  - 'OPENAI_MODEL=gpt-4o-mini,OPENAI_API_KEY=sk-None-hagED548ji7s9aezpN8wT3BlbkFJS7CKkECH4jhqB0w0Liay'
 
 # Get the URL of the backend service
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
