--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,37 +1,37 @@
 # Use an official Python runtime as the base image for the backend
-FROM python:3.10.14-slim-bullseye
+FROM python:3.10-slim-bullseye
 
 # Set the working directory for the backend
 WORKDIR /app
 
-# Install Poetry and dependencies
-RUN pip install --no-cache-dir poetry==1.4.2 \
-    && apt-get update \
-    && apt-get install -y --no-install-recommends gcc libpq-dev \
+# Install system dependencies
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    gcc \
+    libpq-dev \
+    ffmpeg \
+    libsm6 \
+    libxext6 \
+    tesseract-ocr \
     && rm -rf /var/lib/apt/lists/*
 
-# Install ffmpeg and related libraries
-RUN apt-get update && apt-get install ffmpeg libsm6 libxext6 -y
+# Install Poetry
+RUN pip install --no-cache-dir poetry==1.4.2
 
-# Copy pyproject.toml and poetry.lock (if available)
+# Copy pyproject.toml and poetry.lock
 COPY pyproject.toml poetry.lock* ./
 
-# Project initialization:
+# Install project dependencies
 RUN poetry config virtualenvs.create false \
-    && poetry install --no-interaction --no-ansi
+    && poetry install --no-dev --no-interaction --no-ansi
 
 # Copy the backend source code
 COPY . .
 
-# Install Tesseract OCR and Python packages
-RUN apt-get update && apt-get install -y \
-    tesseract-ocr \
-    && rm -rf /var/lib/apt/lists/*
-
+# Install additional Python packages
 RUN pip install pytesseract pillow opencv-python-headless
 
 # Expose the port the app runs on
 EXPOSE 8080
 
 # Start the backend server
-CMD ["gunicorn", "--bind", "0.0.0.0:8080", "api:app"]
+CMD ["python", "api.py"]
