--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -6,4 +6,10 @@ server {
     location / {
         try_files $uri $uri/ /index.html;
     }
+
+    location /api {
+        proxy_pass ${REACT_APP_API_URL};
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
 }
