--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,33 +1,33 @@
 # Use an official Python runtime as the base image for the backend
-FROM python:3.10-slim-bullseye
+FROM python:3.10.14-slim-bullseye
 
 # Set the working directory for the backend
 WORKDIR /app
 
-# Install system dependencies
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    gcc \
-    libpq-dev \
-    ffmpeg \
-    libsm6 \
-    libxext6 \
-    tesseract-ocr \
+# Install Poetry and dependencies
+RUN pip install --no-cache-dir poetry==1.4.2 \
+    && apt-get update \
+    && apt-get install -y --no-install-recommends gcc libpq-dev \
     && rm -rf /var/lib/apt/lists/*
 
-# Install Poetry
-RUN pip install --no-cache-dir poetry==1.4.2
+# Install ffmpeg and related libraries
+RUN apt-get update && apt-get install ffmpeg libsm6 libxext6 -y
 
-# Copy pyproject.toml and poetry.lock
+# Copy pyproject.toml and poetry.lock (if available)
 COPY pyproject.toml poetry.lock* ./
 
-# Install project dependencies
+# Project initialization:
 RUN poetry config virtualenvs.create false \
-    && poetry install --no-dev --no-interaction --no-ansi
+    && poetry install --no-interaction --no-ansi
 
 # Copy the backend source code
 COPY . .
 
-# Install additional Python packages
+# Install Tesseract OCR and Python packages
+RUN apt-get update && apt-get install -y \
+    tesseract-ocr \
+    && rm -rf /var/lib/apt/lists/*
+
 RUN pip install pytesseract pillow opencv-python-headless
 
 # Expose the port the app runs on
