--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,8 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "react-scripts --openssl-legacy-provider start",
-        "build": "react-scripts --openssl-legacy-provider build",
+        "start": "react-scripts start",
+        "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
@@ -13,20 +13,27 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@emotion/react": "^11.13.3",
-        "@emotion/styled": "^11.13.0",
-        "@mui/material": "^6.0.2",
-        "axios": "^0.21.1",
-        "react": "^18.3.1",
-        "react-dom": "^18.3.1",
-        "react-lazy-load-image-component": "^1.6.2"
+        "@emotion/react": "^11.11.1",
+        "@emotion/styled": "^11.11.0",
+        "@mui/material": "^5.14.5",
+        "axios": "^1.4.0",
+        "clsx": "^1.2.1",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-lazy-load-image-component": "^1.6.0",
+        "framer-motion": "^10.12.16",
+        "@motionone/utils": "^10.15.1",
+        "lucide-react": "^0.244.0",
+        "tailwind-merge": "^1.13.2"
     },
     "devDependencies": {
-        "@babel/plugin-proposal-optional-chaining": "^7.21.0",
-        "@types/react": "^17.0.0",
-        "@types/react-dom": "^17.0.0",
-        "react-scripts": "^4.0.3",
-        "typescript": "^4.1.2"
+        "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+        "@types/react": "^18.2.12",
+        "@types/react-dom": "^18.2.5",
+        "@types/node": "^20.5.0",
+        "react-scripts": "5.0.1",
+        "typescript": "^4.9.5",
+        "tailwindcss": "^2.2.19"
     },
     "browserslist": {
         "production": [
@@ -38,11 +45,6 @@
             "last 1 chrome version",
             "last 1 firefox version",
             "last 1 safari version"
-        ]
-    },
-    "babel": {
-        "plugins": [
-            "@babel/plugin-proposal-optional-chaining"
         ]
     }
 }
